# heman

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  SConscript  SConstruct  env.sh  index.html  spelling.json  uncrustify.cfg
css/: main.css
docs/: Makefile  color.rst  conf.py  distance.rst  generate.rst  image.rst  importexport.rst  index.rst  lighting.rst  ops.rst  overview.rst
docs/_static/: overrides.css
docs/gruenschloss/: halton_enum.h  halton_gen.py  halton_sampler.h  main.cpp  mcqmclfsr.cpp
include/: heman.h
js/: giza.min.js  heman.js  main.js
kazmath/: mat3.c  ray2.h
src/: color.c  distance.c  draw.c  export.c  gaussian.c  generate.c  image.c  image.h  import.c  island.c  lighting.c  noise.c  noise.h  ops.c  points.c  wrapjs.cpp
test/: ao_hmap.xml  earth.c  elevation.exr  hut.h  main.c  stb.h  stb_image.h  stb_image_resize.h  test_earth.c  test_heman.c  test_planet.c  test_pts.c  test_sdf.c
